<?xml version="1.0"?>
<package format="3">
  <name>pid_controller_msgs</name>
  <version>0.0.0</version>
  <description>PID Controller Messages</description>
  <maintainer email="oliver@todo.todo">oliver</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>  <!-- Add this line to depend on std_msgs -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
