<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qube_description</name>
  <version>0.0.0</version>
  <description>ROS2 package for visualizing robot joints in RViz</description>
  <maintainer email="olivers.gundersen@gmail.com">oliver</maintainer>
  <license>Apache-2.0</license>

  <!-- Avhengigheter for kjøring -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend> <!-- Nytt! -->
  <exec_depend>joint_state_publisher_gui</exec_depend>

  <!-- Testavhengigheter -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>